adjusting side popout nav to have a fixed height of elements and allow for scroll when overflowed with story elements, adjusting style of dashboard title text

--- a/Source/public/custom-style.css
+++ b/Source/public/custom-style.css
@@ -1,20 +1,33 @@
 .hideDash{
-    -ms-transform: translate(0px, 50px); /* IE 9 */
-    -webkit-transform: translate(0px, 50px); /* Safari */
-    transform: translate(0px, 50px);
+    -ms-transform: translate(-10px, 150px); /* IE 9 */
+    -webkit-transform: translate(-10px, 150px); /* Safari */
+    transform: translate(-10px, 150px);
     transition-duration: 0.5s;
+	-webkit-filter: blur(0.000001px);
 }
 .showDash{
-    -ms-transform: translate(80px, 50px); /* IE 9 */
-    -webkit-transform: translate(80px, 50px); /* Safari */
-    transform: translate(80px, 50px);
+    -ms-transform: translate(147px, 150px); /* IE 9 */
+    -webkit-transform: translate(147px, 150px); /* Safari */
+    transform: translate(147px, 150px);
     transition-duration: 0.5s;
+	-webkit-filter: blur(0.000001px);
 }
 #dashboardSelector{
-    width: 80px;
+    width: 120px;
     z-index: 10;
-    height: 100%;
-    left: 80px;
+    left: 10px;
+	height: 60%;
+	visibility: hidden;
+}
+#storyNavList{
+	visibility: visible;
+	overflow-y: auto;
+}
+#storynav{
+	overflow-y: auto;
+	height: 100%;
+	width: 160px;
+	visibility: hidden;
 }
 .dash-item{
     border-left: 1px solid black !important;
@@ -24,7 +37,7 @@
     background-color: #3a3d42;
 }
 .nav-item-container{
-    height: 49px;
+    height: 50px;
 }
 .custom-nav-item{
     background-color: #3a3d42;
